...
            columns = GridCells.Fixed(2),
            contentPadding = PaddingValues(8.dp),
            verticalArrangement = Arrangement.spacedBy(8.dp),
            horizontalArrangement = Arrangement.spacedBy(8.dp),
            modifier = Modifier
                .fillMaxSize()
                .testTag("home_sets_grid")
        ) {
            items(
                key = lazyPagingItems.itemKey { it.id },
                count = lazyPagingItems.itemCount,
                contentType = { lazyPagingItems.itemContentType { "SetPreview" } }
            ) { index ->
...
