...
) {
    Scaffold() { paddingValues ->
        Column(
            modifier = Modifier
                .fillMaxSize()
                .padding(paddingValues)
                .testTag("card_detail")
        ) {
            when (uiState) {
                CardDetailUiState.Error -> {
                    Text(text = "Error")
                }

...
