...
                contentPadding = contentPadding,
                verticalArrangement = Arrangement.spacedBy(8.dp),
                horizontalArrangement = Arrangement.spacedBy(8.dp),
                userScrollEnabled = !isRefreshLoading || cardsPagingItems.itemCount > 0,
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("set_cards_grid")
                    .blur(
                        radius = gridBlur,
                        edgeTreatment = BlurredEdgeTreatment.Unbounded,
                    )
            ) {
                items(
...
                )

                Box(
                    modifier = Modifier
                        .padding(horizontal = 32.dp)
                        .fillMaxWidth(0.85f)
                        .testTag("card_quick_look")
                        .sharedBounds(
                            sharedContentState = rememberSharedContentState(
                                key = "card-${targetCard.id}-bounds"
                            ),
                            animatedVisibilityScope = this@AnimatedContent,
                            clipInOverlayDuringTransition = OverlayClip(QuickLookShape),
...
