appId: com.lfgtavora.poketcg.demo
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "home_sets_grid"
    timeout: 30000
- tapOn: "Search"
- assertVisible:
    id: "search_field"
- tapOn: "Home"
- assertVisible:
    id: "home_sets_grid"
- tapOn: "Search"
- assertVisible:
    id: "search_field"
