appId: com.lfgtavora.poketcg.demo
tags:
  - smoke
---
- launchApp
- tapOn: "Search"
- assertVisible:
    id: "search_field"
- tapOn:
    id: "search_field"
- inputText: "Pikachu"
- extendedWaitUntil:
    visible:
      id: "search_result_.*"
      index: 0
    timeout: 30000
- tapOn:
    id: "search_result_.*"
    index: 0
- extendedWaitUntil:
    visible:
      id: "card_detail"
    timeout: 30000
